syntax = "proto3";

package io.github.sibmaks.spring.jfr.dto.protobuf.beans;

option java_multiple_files = true;
option java_package = "io.github.sibmaks.spring.jfr.dto.protobuf.beans";

message BeanDefinition {
  int32 scope = 1;
  int32 class_name = 2;
  int32 name = 3;
  int32 primary = 4;
  repeated int32 dependencies = 5;
  int32 stereotype = 6;
  bool generated = 7;
}

message BeanInitialized {
  int32 context_id = 1;
  int32 bean_name = 2;
  optional int64 pre_initialized_at = 3;
  optional int64 post_initialized_at = 4;
  double duration = 5;
}

message BeanDefinitionList {
  repeated BeanDefinition bean_definitions = 1;
}

message BeansReport {
  map<int32, BeanDefinitionList> bean_definitions = 1;
  repeated BeanInitialized beans = 2;
}